feat(version8): corrections serveur, CORS, URLs API offres et formulaire
- EmailService: ajout sendOtpEmail() et sendPasswordResetEmail()
- EmailService: fix SSL Gmail (ssl.trust=smtp.gmail.com)
- SecurityConfig: allowCredentials(true) + /ws/** en permitAll
- api.js: correction URLs offres (/entreprise/offres, /etudiant/offres)
- entreprise-dashboard: mapping champs formulaire vers DTO (typeStage, dureeMois, localisation, domaine)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>